--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-flask
+streamlit
 PyPDF2
 python-docx
-streamlit
-requests
 scikit-learn
-Flask-SQLAlchemy
-Flask-Migrate
 google-generativeai
 python-dotenv
-Flask-Mail
 thefuzz
 python-Levenshtein
-Flask-WTF
-email_validator
-Flask-Login
 PyMuPDF
+SQLAlchemy
+werkzeug
+pandas
